<resources>
    <string name="app_name">Juego de Preguntas</string>
    <string name="text_todos">Todos</string>
    <string name="tema_arte">Arte</string>
    <string name="tema_ciencia">Ciencia</string>
    <string name="tema_cine">Cine</string>
    <string name="tema_historia">Historia</string>
    <string name="tema_programacion">Programación</string>
    <string name="tema_culgeneral">Cultura General</string>
    <string name="text_nopreguntas">No. de Preguntas</string>
    <string name="text_dificultad">Dificultad</string>
    <string name="dificultad_facil">Facil</string>
    <string name="dificultad_medio">Medio</string>
    <string name="dificultad_dificil">Dificil</string>
    <string name="text_habilitarpistas">Habilitar Pistas</string>
    <string name="text_nopistas">No. de Pistas</string>
    <string name="temas">Temas</string>
    <string-array name="nodepreguntas">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="nodepistas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="false_button">FALSE</string>
    <string name="true_buttom">TRUE</string>
    <string name="next_button">Next</string>
    <string name="previous_button">"Previous"</string>
    <string name="answered_text">Done</string>
    <string name="question_text_1">¿La luna es de queso?</string>
    <string name="question_text_2">¿La mayonesa es un instrumento?</string>
    <string name="question_text_3">¿La tierra es plana?</string>
    <string name="question_text_4">¿Si al juicio a los expresidentes?</string>
    <string name="question_text_5">¿Fue primero la gallina?</string>
    <string name="question_text_6">¿La quesadilla lleva queso?</string>
    <string name="question_Arte_1">¿Quien pinto el nacimiento de venus?</string>
    <string name="r_question_Arte_1_1">Santiago el noble</string>
    <string name="r_question_Arte_1_2">Botticelli</string>
    <string name="r_question_Arte_1_3">Tiziano</string>
    <string name="r_question_Arte_1_4">Oscar de la olla</string>
    <string name="question_Arte_2">¿En que siglo nacio Diego Velázquez?</string>
    <string name="r_question_Arte_2_1">Siglo XVI</string>
    <string name="r_question_Arte_2_2">Siglo XVII</string>
    <string name="r_question_Arte_2_3">Siglo XVIII</string>
    <string name="r_question_Arte_2_4">Siglo XV</string>
    <string name="question_Arte_3">¿En que museo esta la monalisa?</string>
    <string name="r_question_Arte_3_1">Museo del prado</string>
    <string name="r_question_Arte_3_2">Louvre</string>
    <string name="r_question_Arte_3_3">Galeria Uffizi</string>
    <string name="r_question_Arte_3_4">British Museum</string>
    <string name="question_Arte_4">¿En que siglo nació Van Gogh?</string>
    <string name="r_question_Arte_4_1">Siglo XX</string>
    <string name="r_question_Arte_4_2">Siglo XIX</string>
    <string name="r_question_Arte_4_3">Siglo XVII</string>
    <string name="r_question_Arte_4_4">Siglo XVIII</string>
    <string name="question_Arte_5">¿En que siglo se inició el renacimiento?</string>
    <string name="r_question_Arte_5_1">Siglo XIV</string>
    <string name="r_question_Arte_5_2">Siglo XV</string>
    <string name="r_question_Arte_5_3">Siglo XIII</string>
    <string name="r_question_Arte_5_4">Siglo XXI</string>
    <string name="question_Arte_6">¿Qué nombre recibe el estilo arquitectónico de las construcciones árabes en la península?</string>
    <string name="r_question_Arte_6_1">Arabesco</string>
    <string name="r_question_Arte_6_2">Mozárabe</string>
    <string name="r_question_Arte_6_3">Nazarí</string>
    <string name="r_question_Arte_6_4">Arábigo</string>
    <string name="question_Arte_7">¿En que año pinto Picasso el "Guernica"?</string>
    <string name="r_question_Arte_7_1">1947</string>
    <string name="r_question_Arte_7_2">1937</string>
    <string name="r_question_Arte_7_3">1957</string>
    <string name="r_question_Arte_7_4">1927</string>
    <string name="question_Arte_8">¿Quien pinto la monalisa?</string>
    <string name="r_question_Arte_8_1">Leonardo Di Caprio</string>
    <string name="r_question_Arte_8_2">Leonardo Da Vinci</string>
    <string name="r_question_Arte_8_3">Miguel Angel</string>
    <string name="r_question_Arte_8_4">Loreto</string>
    <string name="question_Arte_9">¿Quien hizo el mural de la capilla sixtina?</string>
    <string name="r_question_Arte_9_1">San Agustin</string>
    <string name="r_question_Arte_9_2">Miguel Angel</string>
    <string name="r_question_Arte_9_3">Frida Khalo</string>
    <string name="r_question_Arte_9_4">Hugo Lopez Mateo</string>
    <string name="question_Arte_10"> Uno de estos artistas es mexicano</string>
    <string name="r_question_Arte_10_1">Leonardo Da Vinci</string>
    <string name="r_question_Arte_10_2">Frida Khalo</string>
    <string name="r_question_Arte_10_3">Miguel Angel</string>
    <string name="r_question_Arte_10_4">Augusto Compte</string>
    <string name="question_Historia_1">¿Qué líder tribal luchó contra la ocupación romana de Gran Bretaña (Britania)?</string>
    <string name="r_question_Historia_1_1">Tácito</string>
    <string name="r_question_Historia_1_2">Boudica</string>
    <string name="r_question_Historia_1_3">Ariovistus</string>
    <string name="r_question_Historia_1_4">Prasutagus</string>
    <string name="question_Historia_2">¿Con qué nombre se conoce el escándalo que obligó al presidente estadounidense Richard Nixon a dimitir?</string>
    <string name="r_question_Historia_2_1">Vietnam</string>
    <string name="r_question_Historia_2_2">Watergate</string>
    <string name="r_question_Historia_2_3">Powergate</string>
    <string name="r_question_Historia_2_4">Nixon Process</string>
    <string name="question_Historia_3">¿Qué esposas de Enrique VIII fueron decapitadas?</string>
    <string name="r_question_Historia_3_1">Ana de Cléveris y Ana Bolena</string>
    <string name="r_question_Historia_3_2">Ana Bolena y Catherine Howard</string>
    <string name="r_question_Historia_3_3">Ana Bolena y Catalina de Aragón</string>
    <string name="r_question_Historia_3_4">Catalina Howard y Catalina Parr</string>
    <string name="question_Historia_4">¿Qué emperador romano legalizó el cristianismo y puso fin a la persecución de los cristianos?</string>
    <string name="r_question_Historia_4_1">Nerón</string>
    <string name="r_question_Historia_4_2">Constantino</string>
    <string name="r_question_Historia_4_3">Trajano</string>
    <string name="r_question_Historia_4_4">Adriano</string>
    <string name="question_Historia_5">¿Cuántas personas murieron durante el Gran Incendio de Londres de 1666 según los registros?</string>
    <string name="r_question_Historia_5_1">60</string>
    <string name="r_question_Historia_5_2">6</string>
    <string name="r_question_Historia_5_3">600</string>
    <string name="r_question_Historia_5_4">6000</string>
    <string name="question_Historia_6">¿Qué hito informático de 1969 cambiaría radicalmente el curso de la historia de la humanidad?</string>
    <string name="r_question_Historia_6_1">El primer ipod</string>
    <string name="r_question_Historia_6_2">Internet</string>
    <string name="r_question_Historia_6_3">El primer ordenador personal</string>
    <string name="r_question_Historia_6_4">El primer router de wifi</string>
    <string name="question_Historia_7">¿Qué hito informático de 1969 cambiaría radicalmente el curso de la historia de la humanidad?</string>
    <string name="r_question_Historia_7_1">Abraham Lincoln</string>
    <string name="r_question_Historia_7_2">George Washington</string>
    <string name="r_question_Historia_7_3">Thomas Jefferson</string>
    <string name="r_question_Historia_7_4">Andrew Jackson</string>
    <string name="question_Historia_8">¿Por qué es significativo el Poema de Gilgamesh?</string>
    <string name="r_question_Historia_8_1">Sobre un gigante llamado gilgamesh</string>
    <string name="r_question_Historia_8_2">Es la primera obra epica que hacer referencia a la inmortalidad y la percepción huamana del alma</string>
    <string name="r_question_Historia_8_3">El tratado de paz mas antiguo del mundo</string>
    <string name="r_question_Historia_8_4">Una queja del pesimo servicio por parte del rey a sus trabajadores</string>
    <string name="question_Historia_9">¿Cuál es el nombre de la famosa batalla donde Napoleón Bonaparte fue derrotado?</string>
    <string name="r_question_Historia_9_1">La batalla del Álamo</string>
    <string name="r_question_Historia_9_2">La batalla de Waterloo</string>
    <string name="r_question_Historia_9_3">La batalla de Stalingrado</string>
    <string name="r_question_Historia_9_4">La batalla de peubla</string>
    <string name="question_Historia_10">¿A través de qué río africano se alzó el antiguo Egipto?</string>
    <string name="r_question_Historia_10_1">Amazonas</string>
    <string name="r_question_Historia_10_2">Nilo</string>
    <string name="r_question_Historia_10_3">Tigris</string>
    <string name="r_question_Historia_10_4">Éufrates</string>
    <string name="question_Ciencia_1">Geografía. ¿Cuál es el país más grande del mundo?</string>
    <string name="r_question_Ciencia_1_1">Canadá</string>
    <string name="r_question_Ciencia_1_2">Rusia</string>
    <string name="r_question_Ciencia_1_3">Estados Unidos</string>
    <string name="r_question_Ciencia_1_4">Mexico</string>
    <string name="question_Ciencia_2">Medicina. ¿Qué animal utilizó el Premio Nobel de medicina Ivan Pavlov en sus experimentos?</string>
    <string name="r_question_Ciencia_2_1">Roedores</string>
    <string name="r_question_Ciencia_2_2">Perros</string>
    <string name="r_question_Ciencia_2_3">Gatos</string>
    <string name="r_question_Ciencia_2_4">Loros</string>
    <string name="question_Ciencia_3">¿Qué es el complejo de Edipo?</string>
    <string name="r_question_Ciencia_3_1">Evidencia de un sentimiento morboso de celos exagerados</string>
    <string name="r_question_Ciencia_3_2">Evidencia un sentimienyo romantico/sexual del niño hacia la madre, viendo al padre como rival</string>
    <string name="r_question_Ciencia_3_3">Distorsión de la realidad</string>
    <string name="r_question_Ciencia_3_4">Pensamiento del paciente que hace que piense que se encuentre en un programa de televisión</string>
    <string name="question_Ciencia_4">¿Por qué es conocida la bióloga británica Jane Goodall?</string>
    <string name="r_question_Ciencia_4_1">Por su estudio sobre los osos polares en el Artico</string>
    <string name="r_question_Ciencia_4_2">Por su estudio sobre los primates de Tanzania</string>
    <string name="r_question_Ciencia_4_3">Por su estudio sobre los koalas en Australia</string>
    <string name="r_question_Ciencia_4_4">Por su estudio de los manatis en México</string>
    <string name="question_Ciencia_5">¿Quiénes crearon el número 0?</string>
    <string name="r_question_Ciencia_5_1">Los árabes</string>
    <string name="r_question_Ciencia_5_2">Los mayas</string>
    <string name="r_question_Ciencia_5_3">Los romanos</string>
    <string name="r_question_Ciencia_5_4">Los griegos</string>
    <string name="question_Ciencia_6">¿De dónde procede la famosa “piedra pómez”?</string>
    <string name="r_question_Ciencia_6_1">Del fondo marino</string>
    <string name="r_question_Ciencia_6_2">Del magma de los volcanes</string>
    <string name="r_question_Ciencia_6_3">De las minas</string>
    <string name="r_question_Ciencia_6_4">del espacio</string>
    <string name="question_Ciencia_7">question_Science_7</string>
    <string name="r_question_Ciencia_7_1">Iridio</string>
    <string name="r_question_Ciencia_7_2">Osmio</string>
    <string name="r_question_Ciencia_7_3">Wolframio</string>
    <string name="r_question_Ciencia_7_4">Cobre</string>
</resources>