<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.glomadrian.grav.GravView
        android:id="@+id/grav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        app:animationGenerators="@array/BallWaveAnimations"
        app:array_colors="@array/Spectral"
        app:ball_size="1dp"
        app:ball_size_from_size="3dp"
        app:ball_size_to_size="6dp"
        app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
        app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
        app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
        app:regular_cell_size="100"
        app:regular_variance="200"
        app:shake_direction="horizontal"
        app:shake_variance="50dp"
        app:side_to_side_direction="downToUp"
        app:side_to_side_max_duration="5000"
        app:side_to_side_min_duration="2000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/temas"
                    android:textSize="24sp" />

                <Switch
                    android:layout_marginLeft="10dp"
                    android:id="@+id/vswtodos"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_todos" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutdetemas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vswtodos"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/vcbarte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema_arte" />

                    <CheckBox
                        android:id="@+id/vcbciencai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema_ciencia" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/vcbcine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema_cine" />

                    <CheckBox
                        android:id="@+id/vcbhistoria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema_historia" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/vcbprogramacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema_programacion" />

                    <CheckBox
                        android:id="@+id/vcbcultura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema_culgeneral" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nopreguntas"
                    android:textSize="24sp" />

                <Spinner
                    android:layout_marginLeft="10dp"
                    android:id="@+id/vspnopreguntas"
                    android:layout_width="196dp"
                    android:layout_height="30dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:layout_marginTop="30dp"
                android:text="@string/text_dificultad"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/grupoDeRadios"
                android:layout_width="273dp"
                android:layout_height="142dp"
                android:layout_below="@id/textView5"
                tools:ignore="MissingConstraints">

                <RadioButton
                    android:id="@+id/rbtnFacil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dificultad_facil" />

                <RadioButton
                    android:id="@+id/rbtnMedio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dificultad_medio" />

                <RadioButton
                    android:id="@+id/rbtnDificil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dificultad_dificil" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_habilitarpistas"
                    android:textSize="24sp" />

                <ToggleButton
                    android:layout_marginLeft="10dp"
                    android:id="@+id/vtbpistas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txvNoPistas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nopistas"
                    android:textSize="24sp" />

                <Spinner
                    android:layout_marginLeft="10dp"
                    android:id="@+id/vspnopistas"
                    android:layout_width="156dp"
                    android:layout_height="31dp" />
            </LinearLayout>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btnGuardarPreferencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="Guardar" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>